--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "puppeteer": "^21.3.8",
     "puppeteer-extra": "^3.3.4",
     "puppeteer-extra-plugin-stealth": "^2.11.1",
     "express": "^4.18.2",
